-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
None
-
Callgrind points to QCollator. See attached main.cpp.
In Qt 4 when I inserted some (20 000+) rows into a QTreeWidget or QTableWidget and enabled sorting, it never took more than a second to display that amount of data.
Now, on Qt 5 the very same code executes in 10 seconds on a Core i7.
I attach a sample code (qmake && make) which contains a random string list which gets loaded into a QTreeWidget. Then gets sorted.
In Qt 4.8.1 I get the following output:
Textfile read in 12 ms
Items inserted into the table in 1105 ms
Items sorted in 303 ms
In Qt 5.2:
Textfile read in 6 ms
Items inserted into the table in 58 ms
Items sorted in 9169 ms
This is a huge performance decline.
- resulted in
-
QTBUG-95050 [REG: 5.2->5.14] Locale used by QString::localeAwareCompare() no longer changeable
-
- Closed
-
| For Gerrit Dashboard: QTBUG-36149 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 76118,2 | Reuse one QCollator instance for QString::localeAwareCompare | stable | qt/qtbase | Status: MERGED | +2 | 0 |
| 78162,1 | Reuse one QCollator instance for QString::localeAwareCompare | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |